refactor | fixed sonar code smells